--- a/index.scss
+++ b/index.scss
@@ -73,6 +73,7 @@ nav {
 .hero {
 
     .text {
+        z-index: 4;
         width: 35vw;
         width: 100vw;
         // flex-shrink: 0;
@@ -80,6 +81,7 @@ nav {
         .leaf {
             height: 80px;
             width: 100px;
+            margin-bottom: -60px;
 
             img {
                 height: 100%;
@@ -121,7 +123,12 @@ nav {
         width: 100vw;
 
         .carousel-component {
-            overflow: scroll;
+            overflow: hidden;
+
+            ::-webkit-scrollbar {
+                display: none;
+            }
+
             min-width: fit-content;
 
             .carousel-wrapper-div {
@@ -171,13 +178,14 @@ nav {
 @media screen and (min-width:768px) {
     .hero {
         height: 70vh;
+        margin-bottom: 100px;
 
         .text {
             width: 35vw;
         }
 
         .carousel-div {
-            width: 70vw;
+            width: 75vw;
             position: absolute;
 
             .carousel-picture {
